<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoftballStatTracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_player">AddPlayerActivity</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="title_activity_choose_players">ChoosePlayersActivity</string>
    <string name="choose_players">Choose Players</string>
    <string name="start">Start</string>
    <string name="mainMenu">Main Menu</string>
    <string name="addPlayer">Add Player</string>
    <string name="addGame">Add Game</string>
    <string name="addStats">Add Stats</string>
    <string name="choosePlayersGame">Choose players for this game</string>
    <string name="datePlayed">When was this game played?</string>
    <string name="shortDescription">Short description of the game.</string>
    <string name="gameName">Game Name</string>
    <string name="title_activity_players_selected">PlayersSelectedActivity</string>
    <string name="text_label">Fragment Two</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="at_bats">At Bats</string>
    <string name="singles">Singles</string>
    <string name="doubles">Doubles</string>
    <string name="triples">Triples</string>
    <string name="homeruns">Homeruns</string>
    <string name="rbis">RBIs</string>
    <string name="walks">Walks</string>
    <string name="put_outs">Put Outs</string>
    <string name="beers_drank">Beers Drank</string>
    <string name="title_activity_leader_boards">LeaderBoardsActivity</string>
    <string name="leaderBoards">LeaderBoards</string>
    <string name="title_activity_game_by_game_stat">GameByGameStatActivity</string>
    <string name="title_activity_add_stats_dialog">AddStatsDialogActivity</string>

</resources>
