<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/mainmenubackground">
        
    <TextView
        android:id="@+id/mainMenuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addPlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:text="@string/mainMenu"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/addPlayer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/addGame"
        android:layout_marginTop="107dp"
        android:onClick="addPlayer"
        android:text="@string/addPlayer" />

    <Button
        android:id="@+id/addGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPlayer"
        android:layout_centerHorizontal="true"
        android:onClick="addGame"
        android:text="@string/addGame" />
    
    <Button
        android:id="@+id/leaderBoardButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addGame"
        android:layout_centerHorizontal="true"
        android:onClick="onLeaderBoard"
        android:text="@string/leaderBoards" />

</RelativeLayout>