<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/atBats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/atBatsLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/at_bats" />
        
         <EditText
             android:id="@+id/atBatsInput"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:gravity="center_vertical|fill_vertical|center_horizontal"
             android:inputType="number"
             android:selectAllOnFocus="true"
             android:text="0" />

    </LinearLayout>
    
   <LinearLayout
        android:id="@+id/walks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:gravity="right"
        android:layout_toRightOf="@id/atBats" >

        <TextView
            android:id="@+id/walksLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/walks" />

        <EditText
            android:id="@+id/walksInput"
        	android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
  <LinearLayout
      android:id="@+id/singles"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/atBats"
      android:layout_marginTop="15dp"
      android:gravity="left" >

        <TextView
            android:id="@+id/singlesLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/singles" />

        <EditText
            android:id="@+id/singlesInput"
            android:layout_width="50dp"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
   <LinearLayout
       android:id="@+id/doubles"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/singles"
       android:layout_marginTop="15dp"
       android:gravity="left" >

        <TextView
            android:id="@+id/doublesLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/doubles" />

        <EditText
            android:id="@+id/doublesInput"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/sacFlys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/walks"
        android:layout_marginTop="15dp"
        android:gravity="right" >

        <TextView
            android:id="@+id/sacFlysLabel"
            android:layout_width="wrap_content"
             android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="Sac Flys" />

        <EditText
            android:id="@+id/sacFlysInput"
             android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/triples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/doubles"
        android:layout_marginTop="15dp"
        android:gravity="left" >

        <TextView
            android:id="@+id/triplesLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/triples" />

        <EditText
            android:id="@+id/triplesInput"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/putOuts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/sacFlys" 
        android:gravity="right">

        <TextView
            android:id="@+id/putOutsLabel"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/put_outs" />

        <EditText
            android:id="@+id/putOutsInput"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_width="50dp"
            android:text="0"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>

     <LinearLayout
        android:id="@+id/beersDrank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/putOuts" 
        android:gravity="right">

        <TextView
            android:id="@+id/beersDrankLabel"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/beers_drank" />

        <EditText
            android:id="@+id/beersDrankInput"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_width="50dp"
            android:text="0"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
     <LinearLayout
         android:id="@+id/homeRuns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/triples"
         android:layout_marginTop="15dp"
         android:gravity="left" >

        <TextView
            android:id="@+id/homeRunsLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/homeruns" />

        <EditText
            android:id="@+id/homeRunsInput"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_width="50dp"
            android:layout_marginLeft="5dp"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
  <LinearLayout
      android:id="@+id/rbis"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/homeRuns"
      android:layout_marginTop="15dp"
      android:gravity="left" >

        <TextView
            android:id="@+id/rbisLabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/rbis" />

        <EditText
            android:id="@+id/rbisInput"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_width="50dp"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:text="0"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </LinearLayout>
    
    <Button
        android:id="@+id/saveStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onSaveStats"
        android:text="Save" />

</RelativeLayout>